[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mario"
version = "1.0.0"
authors = [
  { name="Jasper Dekoninck", email="dekoninck.jasper@protonmail.com" },
]
description = "Super Mario Bros implementation in Pygame"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache 2.0 License",
    "Operating System :: OS Independent",
]

dependencies = [
    "pygame >= 2.5.2",
    "numpy >= 1.24.3",
]